--- a/_mdn-study/_html-study/_texts-html-practicing/login.html
+++ b/_mdn-study/_html-study/_texts-html-practicing/login.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="../_css/_practicing/login.css">
+    <script src="https://kit.fontawesome.com/13c795a06f.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
+    <div id="container">
         <form action="">
             <div class="login">
                 <div class="title">Projeto</div>
@@ -18,11 +19,9 @@
                 </div>
                 <div class="box">
                     <input type="password" id="password" name="password" minlength="1" required>
-                    <label for="password" class="placeholder">Senha</label>
-                    <!--
+                    <label for="password" class="placeholder" autocomplete="current-password">Senha</label>
                     <label for="show" class="show">Mostrar</label>
                     <input type="checked" id="show">
-                    -->
                 </div>
             </div>
             <div class="button">
