--- a/_mdn-study/_html-study/_texts-html-practicing/login.html
+++ b/_mdn-study/_html-study/_texts-html-practicing/login.html
@@ -11,8 +11,11 @@
 <body>
     <div id="container">
         <form action="">
+
+            <!-- Login section -->
+
             <div class="login">
-                <div class="title">Projeto</div>
+                <div class="title">Prática</div>
                 <div class="box">
                     <input type="text" id="user" name="user" minlength="1" required>
                     <label for="user" class="placeholder">Nome de usuário ou e-mail</label>
@@ -24,9 +27,15 @@
                     <input type="checked" id="show">
                 </div>
             </div>
+
+            <!-- Registration button -->
+
             <div class="button">
                 <input type="submit" value="Entrar">
             </div>
+
+            <!-- Register -->
+
             <p>Não tem uma conta? <a href="web-form-personal-exercise.html">Cadastre-se</a></p>
         </form>
     </div>
