--- a/_mdn-study/_html-study/_texts-html-practicing/web-forms-practice.html
+++ b/_mdn-study/_html-study/_texts-html-practicing/web-forms-practice.html
@@ -480,10 +480,59 @@
                 </p>
             </fieldset>
         </form>
+        <p><strong>Fifth form:</strong></p>
+        <form class="example18">
+            <h1>Numeric value</h1>
+            <h2>Has nothing special</h2>
+            <p>
+                <label for="age">How old are you?</label>
+                <input type="number" id="age">
+            </p>
+            <h2>Has min attribute</h2>
+            <p>
+                <label for="">How many do you intend to donate? (Note that it starts by 10)</label>
+                $ <input type="number" min="10">
+            </p>
+            <h2>Has max attribute</h2>
+            <p>
+                <label for="">How many do you intend to donate? (Note that it don't exceed 1000)</label>
+                $ <input type="number" max="1000">
+            </p>
+            <h2>Step attribute equal "1"</h2>
+            <p>
+                <label for="">How many do you to buy? (Note that it will only accept entire numbers.</label>
+                <input type="number">
+            </p>
+            <h2>Step attribute equal "any" and utilization of max and min attribute</h2>
+            <p>
+                <label for="">Math test grade:</label>
+                <input type="number" min="0" max="10" step="any">
+            </p>
+            <h2>Step attribute equal "0.1" and utilization of max and min attribute</h2>
+            <p>
+                <label for="">Define the interest rate (number between 0 - 1)</label>
+                <input type="number" min="0" max="1" step="0.1">
+            </p>
+            <p>
+                <input type="submit" value="Send now">
+            </p>
+        </form>
+        <p><strong>Sixth form:</strong></p>
+        <form action="" class="example19">
+            <h1>Range value</h1>
+            <p>
+                <label for="">How much did you like the ux?</label>
+                0 <input type="range" min="0" max="10"> 10
+            </p>
+            <p>
+                <input type="submit" value="Send now">
+            </p>
+        </form>
+        <p><span class="seeya">Come back here after study JavaScript to learn how to make the slider show the actual value.</span></p>
         <h2>Abstract and useful informations</h2>
         <ul>
             <li></li>
-        </ul>
+        </ul> 
     </div>
 </body>
 </html>
