Update Web forms - MDN
It covers:
- Other form controls

I've changed:
- The HTML5 input types

--- a/_mdn-study/_html-study/_texts-html-practicing/web-forms-practice.html
+++ b/_mdn-study/_html-study/_texts-html-practicing/web-forms-practice.html
@@ -529,10 +529,109 @@
             </p>
         </form>
         <p><span class="seeya">Come back here after study JavaScript to learn how to make the slider show the actual value.</span></p>
+        <p><strong>Seventh form:</strong></p>
+        <form action="" class="example20">
+            <h1>Datetime-local attribute</h1>
+            <p>
+                <label for="">Birthday date</label>
+                <input type="date">
+            </p>
+            <p>
+                <input type="submit" value="Send now">
+            </p>
+            <h1>Datetime-local attribute</h1>
+            <p>
+                <label for="">Time and date of arrival</label>
+                <input type="datetime-local">
+            </p>
+            <p>
+                <input type="submit" value="Send now">
+            </p>
+            <h1>Month attribute</h1>
+            <p>
+                <label for="">Course start date</label>
+                <input type="month">
+            </p>
+            <p>
+                <input type="submit" value="Send now">
+            </p>
+            <h1>Time attribute</h1>
+            <p>
+                <label for="">Arrival time</label>
+                <input type="time">
+            </p>
+            <p>
+                <input type="submit" value="Send now">
+            </p>
+            <h1>Week attribute</h1>
+            <p>
+                <label for="">Select your vacation week</label>
+                <input type="week">
+            </p>
+            <p>
+                <input type="submit" value="Send now">
+            </p>
+            <h1>Date attribute and utilization of min, max and step attribute</h1>
+            <p>
+                <label for="">Select your vacation date of the current month</label>
+                <input type="date" min="2021-12-01" max="2021-12-31" step="3">
+            </p>
+            <p>
+                <input type="submit" value="Send now">
+            </p>
+        </form>
+        <p><strong>Eighth form:</strong></p>
+        <form action="" class="example21">
+            <p>
+                <label for="">Select your favorite color</label>
+                <input type="color">
+            </p>
+            <p>
+                <input type="submit" value="Send now">
+            </p>
+        </form>
         <h2>Abstract and useful informations</h2>
         <ul>
             <li></li>
-        </ul> 
+        </ul>
+        <h1>Other form controls</h1>
+        <div class="examples-container">
+            <p><strong>First form:</strong></p>
+            <form action="" class="example22">
+                <section>
+                    <h1>Text area tag</h1>
+                    <label for="">Try to type inside the next input</label>
+                    <textarea></textarea>
+                </section>
+                <section>
+                    <h2>Cols and rows attributes</h2>
+                    <label for="">Try to type inside the next input</label>
+                    <textarea cols="10" rows="10"></textarea>
+                </section>
+                <section>
+                    <h2>Wrap equal to "soft" (default value)</h2>
+                    <label for="">Try to type inside the next input</label>
+                    <textarea cols="30" rows="20" wrap="soft"></textarea>
+                </section>
+                <section>
+                    <h2>Wrap equal to "hard"</h2>
+                    <label for="">Try to type inside the next input</label>
+                    <textarea cols="30" rows="20" wrap="hard"></textarea>
+                </section>
+                <section>
+                    <h2>Wrap equal to off</h2>
+                    <label for="">Try to type inside the next input</label>
+                    <textarea wrap="off"></textarea>
+                </section>
+                <p>
+                    <input type="submit" value="Send now">
+                </p>
+            </form>
+        </div>
+        <h2>Abstract and useful informations</h2>
+        <ul>
+            <li></li>
+        </ul>
     </div>
 </body>
 </html>
